@@ -12,6 +12,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.ResourceBundle;
 import java.util.concurrent.Executors;
@@ -42,7 +43,12 @@ public class TreeLoadingScreenController extends Controller implements Initializ
 
     public void changeScene(Stage stage, ChoiceBox<String>[] selectedStudent) throws IOException {
         TreeVisualizationController treeController = (TreeVisualizationController) controllers.get("Tree Visualizer");
-        List<String> labels = List.of("One", "Two", "Three", "Four", "Five","One", "Two", "Three", "Four", "Five","One", "Two", "Three", "Four", "Five","One", "Two", "Three", "Four", "Five","One", "Two", "Three", "Four", "Five","One", "Two", "Three", "Four", "Five","One", "Two", "Three", "Four", "Five","One", "Two", "Three", "Four", "Five");
+        List<String> labels = Arrays.asList("A", "-34", "-39", "1 tau", "1.0 Hz", "low", "25", "30", "76", "52", "-29", "-8", "112",
+                "0.1 Hz", "2 tau", "37", "10", "nothing", "18", "7", "90", "41", "40", "10", "115",
+                "108", "medium", "nothing", "2 tau", "D", "-1", "58", "125", "69", "-16", "E", "-39",
+                "-24", "-26", "-32", "133", "5.0 Hz", "-40", "full", "D", "3 tau", "medium", "0.5 Hz",
+                "-37", "0.1 Hz", "D", "high", "-33", "B", "F", "-30", "0.5 Hz", "130", "test", "test", "test", "test", "test");
+
         List<String> student = new ArrayList<>();
 
         for(ChoiceBox<String> categorySelector : selectedStudent) {
@@ -50,7 +56,7 @@ public class TreeLoadingScreenController extends Controller implements Initializ
         }
         System.out.println(student);
 
-        treeController.passProperties(1,labels, 5, student, 7);
+        treeController.passProperties(1,labels, 6, student, 7);
         treeController.passProperties(2,labels, 1, student, 2);
         treeController.passProperties(3,labels, 2, student, 4);
         treeController.passProperties(4,labels, 3, student, 5);
